Update JavaBasics.md